# hackathon-phase-todo-app

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: implement.md  plan.md  specify.md  tasks.md
.spec-kit/: config.yaml
backend/: .dockerignore  Dockerfile  auth.py  database.py  main.py  models.py  pyproject.toml
backend/middleware/: jwt_middleware.py
backend/routes/: auth.py  health.py  tasks.py
frontend/: .dockerignore  CLAUDE.md  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/api/auth/[...all]/: route.ts
frontend/src/app/components/: Navigation.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx
frontend/src/app/components/ui/: button.tsx  card.tsx  checkbox.tsx  input.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/lib/: api.ts  auth-client.ts  auth.ts  utils.ts
specs/: architecture.md  constitution.md  overview.md
specs/api/: rest-endpoints.md
specs/database/: schema.md
specs/features/: authentication.md  task-crud.md
specs/ui/: components.md  pages.md
